--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ async function checkComplexity() {
     .then(res => res.json());
 
     document.getElementById('result').innerText = result.body;
+    console.log(result.body);
 }
 </script>
 
